<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ina226_ros2_i2c</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="emre.kuru97@hotmail.com">gna</maintainer>
  <license>TODO: License declaration</license>

  <depend>libi2c-dev</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
